@@ -1615,6 +1615,24 @@ argument_list|(
 name|mergerContext
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|tokens
+operator|.
+name|isReverse
+argument_list|()
+condition|)
+block|{
+name|getApplication
+argument_list|()
+operator|.
+name|getUndoManager
+argument_list|()
+operator|.
+name|discardAllEdits
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 specifier|private
 name|ModelMergeDelegate
